syntax = "proto3";


option java_multiple_files = true;
option java_package = "ds.java.smartOffice";
option java_outer_classname = "RoomControllerServiceImpl";

service RoomController {
	rpc doorAccess (doorRequest) returns (doorReply){}
	rpc airCon (tempRequest) returns (tempReply){}
	rpc lighting (lightRequest) returns (lightReply){}
}
  
message doorRequest{
	int32 passCode = 1;
}

message doorReply{
	string success = 1;
}

message tempRequest{
	string temp = 1;
}

message tempReply{
	string tempResult = 1;
}

message lightRequest{
	double timeElapsed = 1;
}

message lightReply{
	string stayOn = 1;
	string turnOff = 2;
}